[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Room3/door.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Room3/door.png" type="Texture" id=2]
[ext_resource path="res://Sprites/keyhole.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Room3/door_open.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 241.617, 461.412 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.3538, 57.0841 )

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="DoorOpen" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="DoorClosed" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="DoorTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorTrigger"]
position = Vector2( 184, 0 )
shape = SubResource( 1 )

[node name="Keyhole" type="Sprite" parent="."]
position = Vector2( 371.931, 148.786 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="KeyholeTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyholeTrigger"]
position = Vector2( 370.931, 153.672 )
shape = SubResource( 2 )
[connection signal="input_event" from="DoorTrigger" to="." method="on_click"]
[connection signal="input_event" from="KeyholeTrigger" to="." method="on_key_click"]
